# git_flux

./: Cargo.toml  README.md  flake.nix  package.json
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 742m3jsf49jfb5sy3mhijjwzvv2zbyiv-source
gitflux/: package.json
src/: main.rs
