[package]
name = "gitflux"
version = "0.1.1"
edition = "2024"
authors = ["Santosh Shrestha <santoshxshrestha@gmail.com> "]
description = "command-line tool that provides quick insights into your GitHub commit activity."
license = "MIT"
repository = "https://github.com/santoshxshrestha/gitflux"
homepage = "https://github.com/santoshxshrestha/gitflux"
documentation = "https://github.com/santoshxshrestha/gitflux#readme"
readme = "README.md"

[dependencies]
reqwest = "0.12.15"
actix-files = "0.6.6"
actix-web = "4.11.0"
askama = "0.14.0"
